# python_charts

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  repo-context.txt  requirements.txt  saved_config.yaml  startup.sh
.github/workflows/: ci.yml
data/: fred.db
scripts/: bitcoin_m2_chart.py  common.py  constants.py  custom_chart.py  lagged_oil_unrate_chart_styled.py  pyproject.toml  refresh_data.py
tests/: test_bitcoin_m2.py  test_plot.py  test_refresh_data.py
